data/derived/comb/progs/unify/prog1523.ml.out
Characters 62-70:
  |  h::t -> h ^ concat t;;
                 ^^^^^^^^
Error: This expression has type char but an expression was expected of type
         string
